--- a/index.html
+++ b/index.html
@@ -73,9 +73,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Company Profile</h2></br>
+          <h2 class="section-heading text-uppercase">Company Profile</h2>
+		  <p id="uline"></p></br>
           <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
         </div>
+		<img src="logo3.png">
+		<img src="kurzl.png">
 		<p class="text-muted">MV Lien Minh Ltd Co., was established in 2003. Since then,
             we're an exclusive agency of Leonhard Kurz Stiftung & Co. KG in Vietnam
             market, which is the leading company in hot stamping foil manufacturing and its
@@ -95,18 +98,6 @@
             sizes and profiles in various industries in Vietnam alone.</p>      
       </div>
 	  
-	  <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/logo3.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-          </a>
-        </div>
       <!--<div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -170,6 +161,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Our Products</h2>
+		  <p id="uline"></p></br>
          <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
         </div>
       </div>
