Add Column to Company Profile
Divided Logo and Content

--- a/index.html
+++ b/index.html
@@ -77,9 +77,15 @@
 		  <p id="uline"></p></br>
           <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
         </div>
-		<img src="logo3.png">
-		<img src="kurzl.png">
-		<p class="text-muted">MV Lien Minh Ltd Co., was established in 2003. Since then,
+	      </div>
+	  <div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <img src="logo3.png" class="img-fluid">
+		<img src="kurzl.png" class="img-fluid">
+    </div>
+    <div class="col-sm">
+      <p class="text-muted">MV Lien Minh Ltd Co., was established in 2003. Since then,
             we're an exclusive agency of Leonhard Kurz Stiftung & Co. KG in Vietnam
             market, which is the leading company in hot stamping foil manufacturing and its
             related technologies.</P>
@@ -95,8 +101,10 @@
             <p class="text-muted">As a part of the worldwide KURZ network of more than 9
             manufacturing plants, 15 subsidiaries and over 80 exclusive agencies, we have
             our head office in Ho Chi Minh City. Today, we serve over 500 companies of all
-            sizes and profiles in various industries in Vietnam alone.</p>      
-      </div>
+            sizes and profiles in various industries in Vietnam alone.</p>
+    </div>
+  </div>
+</div>
 	  
       <!--<div class="row text-center">
         <div class="col-md-4">
