--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Company Profile</h2>
-		  <p id="uline"></p></br>
+          <h2 class="section-heading text-uppercase heading-underline">Company Profile</h2>
           <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
         </div>
 	      </div>
@@ -168,8 +167,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Our Products</h2>
-		  <p id="uline"></p></br>
+          <h2 class="section-heading text-uppercase heading-underline">Our Products</h2>
          <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
         </div>
       </div>
