--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     </div>
   </section>
 
-  <!-- Solutions -->
+  <!-- Solutions
   <section id="about">
     <div class="container">
       <div class="row">
@@ -377,7 +377,7 @@
     </div>
   </section>
 
-  <!-- Team -->
+  <!-- Team 
   <section class="bg-light" id="team">
     <div class="container">
       <div class="row">
@@ -466,7 +466,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   
 
