--- a/index.html
+++ b/index.html
@@ -473,15 +473,39 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">We'd love to hear from you</h2>
+          <h2 class="section-heading">We'd love to hear from you</h2>
           <h3 class="section-subheading text-muted">If you want to know more about our products, features, pricing or anything at all, we are here to answer your questions</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <form id="contactForm" name="sentMessage" novalidate="novalidate">
             <div class="row">
               <div class="col-md-6">
+			  <p class="h2 text-white">Office Locations</p>
+			  </br>
+			  <p class="h4 text-white">Ho Chi Minh City</P>
+			  <p class="h6 text-white-50">No. 23-25, Street 1,</p>
+			  <p class="h6 text-white-50">Chu Van An Quarter, Ward 26,</p>
+			  <p class="h6 text-white-50">Binh Thanh District,</p>
+			  <p class="h6 text-white-50">HCMC, Vietnam.</p>
+			  </br>
+			  <p class="h6 text-white-50">+(84)28 3511 6009</p>
+			  <p class="h6 text-white-50">+(84)28 3511 6010</p>
+			  </br>
+			  <p class="h6 text-white-50">+(84)28 3511 5113</P>
+			    </br>
+			  <p class="h4 text-white">Hanoi</P>
+			  <p class="h6 text-white-50">No. 6, Alley 39,</p>
+			  <p class="h6 text-white-50">Pham Than Duat Street,</p>
+			  <p class="h6 text-white-50">Mai Dich Ward,</p>
+			  <p class="h6 text-white-50">Cau Giay District,</p>
+			  <p class="h6 text-white-50">Hanoi, Vietnam.</p>
+			  </br>
+			  <p class="h6 text-white-50">+(84)24 6282 2821</p>
+			  </br>
+			  </div>
+				<div class="col-md-6">
+			   <form id="contactForm" name="sentMessage" novalidate="novalidate">
                 <div class="form-group">
                   <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
                   <p class="help-block text-danger"></p>
@@ -494,17 +518,18 @@
                   <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
                   <p class="help-block text-danger"></p>
                 </div>
-              </div>
-              <div class="col-md-6">
+              
                 <div class="form-group">
                   <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
                   <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="clearfix"></div>
+				    <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
                 <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
+                </div>
+				</div>
+              </div>
+            
               </div>
             </div>
           </form>
