--- a/index.html
+++ b/index.html
@@ -542,11 +542,11 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
           <span class="copyright">Copyright &copy; MV Lien Minh Co., Ltd. All rights reserved.</span>
         </div>
-        <div class="col-md-4">
-          <!--<ul class="list-inline social-buttons">
+       <!-- <div class="col-md-4">
+          <ul class="list-inline social-buttons">
             <li class="list-inline-item">
               <a href="#">
                 <i class="fab fa-twitter"></i>
@@ -562,9 +562,9 @@
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
-          </ul>-->
-        </div>
-        <div class="col-md-4">
+          </ul>
+        </div>-->
+        <div class="col-md-6">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
               <a href="#">Privacy Policy</a>
