--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Beauty. Security.</div>
-        <div class="intro-heading text-uppercase">We Do Both.</div>
+        <div class="intro-heading">Beauty. Security.</div>
+        <div class="intro-heading">We Do Both.</div>
+		<p class="h4 text-white"> Hot Stamping | Cold Foiling | Brand Enhancement </p>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#company">Tell Me More</a>
       </div>
     </div>
@@ -474,7 +475,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading">We'd love to hear from you</h2>
-          <h3 class="section-subheading text-muted">If you want to know more about our products, features, pricing or anything at all, we are here to answer your questions</h3>
+          <h3 class="section-subheading text-white-50">If you want to know more about our products, features, pricing or anything at all, we are here to answer your questions</h3>
         </div>
       </div>
       <div class="row">
