Changed Header Text BG

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-heading">Beauty. Security.</div>
-        <div class="intro-heading">We Do Both.</div>
-		<p class="h4 text-white"> Hot Stamping | Cold Foiling | Brand Enhancement </p>
+        <div class="intro-heading bg-dark">Beauty. Security.</div>
+        <div class="intro-heading bg-dark">We Do Both.</div>
+		<p class="h4 bg-dark text-white"> Hot Stamping | Cold Foiling | Brand Enhancement </p>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#company">Tell Me More</a>
       </div>
     </div>
