Logo Resize on Company Profile

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 	      </div>
 	  <div class="container">
   <div class="row">
-    <div class="col-sm">
-      <img src="logo3.png" class="img-fluid">
-		<img src="kurzl.png" class="img-fluid">
+    <div class="col-sm-3">
+      <img src="logo3.png" class="img-fluid" style='max-width: 175px'>
+		<img src="kurzl.png" class="img-fluid" style="padding-top: 100px">
     </div>
-    <div class="col-sm">
+    <div class="col-sm-9">
       <p class="text-muted">MV Lien Minh Ltd Co., was established in 2003. Since then,
             we're an exclusive agency of Leonhard Kurz Stiftung & Co. KG in Vietnam
             market, which is the leading company in hot stamping foil manufacturing and its
