--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 	  <div class="container">
   <div class="row">
     <div class="col-sm">
-      <img src="logo3.png" class="img-fluid">
-		<img src="kurzl.png" class="img-fluid">
+      <img src="logo3.png" class="img-fluid" style='max-width: 175px'>
+		<img src="kurzl.png" class="img-fluid" style="padding-top: 100px">
     </div>
     <div class="col-sm">
       <p class="text-muted">MV Lien Minh Ltd Co., was established in 2003. Since then,
