--- a/index.html
+++ b/index.html
@@ -482,17 +482,14 @@
         <div class="col-lg-12">
             <div class="row">
               <div class="col-md-6">
-			  <p class="h2 text-white">Office Locations</p>
-			  </br>
+<p class="h2 text-white mb-4">Office Locations</p>
 			  <p class="h4 text-white">Ho Chi Minh City</P>
 			  <p class="h6 text-white-50">No. 23-25, Street 1,</p>
 			  <p class="h6 text-white-50">Chu Van An Quarter, Ward 26,</p>
 			  <p class="h6 text-white-50">Binh Thanh District,</p>
-			  <p class="h6 text-white-50">HCMC, Vietnam.</p>
-			  </br>
+			  <p class="h6 text-white-50 mb-4">HCMC, Vietnam.</p>
 			  <p class="h6 text-white-50">+(84)28 3511 6009</p>
-			  <p class="h6 text-white-50">+(84)28 3511 6010</p>
-			  </br>
+			  <p class="h6 text-white-50 mb-4">+(84)28 3511 6010</p>
 			  <p class="h6 text-white-50">+(84)28 3511 5113</P>
 			    </br>
 			  <p class="h4 text-white">Hanoi</P>
@@ -500,10 +497,9 @@
 			  <p class="h6 text-white-50">Pham Than Duat Street,</p>
 			  <p class="h6 text-white-50">Mai Dich Ward,</p>
 			  <p class="h6 text-white-50">Cau Giay District,</p>
-			  <p class="h6 text-white-50">Hanoi, Vietnam.</p>
-			  </br>
-			  <p class="h6 text-white-50">+(84)24 6282 2821</p>
-			  </br>
+			  <p class="h6 text-white-50 mb-4">Hanoi, Vietnam.</p>
+			  <p class="h6 text-white-50 mb-4">+(84)24 6282 2821</p>
+			  <p class="h6 text-white-50">vanessa.nguyen@mvlienminh.com.vn</p>
 			  </div>
 				<div class="col-md-6">
 			   <form id="contactForm" name="sentMessage" novalidate="novalidate">
