--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       <div class="intro-text">
         <div class="intro-heading"><mark>Beauty. Security.</mark></div>
         <div class="intro-heading"><mark>We Do Both.</mark></div>
-		<p class="h5 text-white" style="margin: 0 0 20px -1031px; padding-left:40px"><mark> &nbsp &nbsp Hot Stamping | Cold Foiling | Brand Enhancement &nbsp &nbsp</mark></p>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" style="margin-left:-1285px" href="#company">Tell Me More</a>
+		<p class="h5 text-white" style="text-align:left"><mark> &nbsp &nbsp Hot Stamping | Cold Foiling | Brand Enhancement &nbsp &nbsp</mark></p>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#company" style="float: left;">Tell Me More</a>
       </div>
     </div>
   </header>
