Header Text Background Colour Changed

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-heading"><mark>Beauty. Security.</mark></div>
-        <div class="intro-heading"><mark>We Do Both.</mark></div>
-		<p class="h5 text-white" style="text-align:left"><mark> &nbsp &nbsp Hot Stamping | Cold Foiling | Brand Enhancement &nbsp &nbsp</mark></p>
+        <div class="intro-heading"><span style="background-color:#fcf8e3">Beauty. Security.</span></div>
+        <div class="intro-heading"><span style="background-color:#fcf8e3">We Do Both.</span></div>
+		<p class="h5" style="text-align:left;"><span style="background-color:#fcf8e3;"> &nbsp &nbsp Hot Stamping | Cold Foiling | Brand Enhancement &nbsp &nbsp</span></p>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#company" style="float: left;">Tell Me More</a>
       </div>
     </div>
