Fix header alignment

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       <div class="intro-text">
         <div class="intro-heading"><span style="background-color:#fcf8e3">Beauty. Security.</span></div>
         <div class="intro-heading"><span style="background-color:#fcf8e3">We Do Both.</span></div>
-		<p class="h5" style="text-align:left;"><span style="background-color:#fcf8e3;"> &nbsp &nbsp Hot Stamping | Cold Foiling | Brand Enhancement &nbsp &nbsp</span></p>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#company" style="float: left;">Tell Me More</a>
+        <p class="h5 intro-subheading"><span style="background-color:#fcf8e3;">Hot Stamping | Cold Foiling | Brand Enhancement</span></p>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#company">Tell Me More</a>
       </div>
     </div>
   </header>
