Fix logo position in company profile

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 	  <div class="container">
   <div class="row">
     <div class="col-sm-3">
-      <img src="logo3.png" class="img-fluid" style='max-width: 175px'>
-		<img src="kurzl.png" class="img-fluid" style="padding-top: 100px">
+      <img src="logo3.png" class="img-fluid" style="padding: 0 25px 100px 0">
+		<img src="kurzl.png" class="img-fluid">
     </div>
     <div class="col-sm-9">
       <p class="text-muted">MV Lien Minh Ltd Co., was established in 2003. Since then,
