--- a/graphic.html
+++ b/graphic.html
@@ -63,8 +63,15 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase heading-underline">Our Products</h2>
-         <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
+          <h2 class="section-heading text-uppercase heading-underline">Graphics</h2>
+          <h3 class="section-subheading text-muted">The unrivaled technology for surface feel and attraction</h3>
+		  <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
+		  Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
+		  Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
+		  The Kurz foil for the graphic foil:
+		  Luxor/Alufin:  Metallized with high gloss, satingloss, matt, super matt, metallic.
+		  Lightline: Diffractive Endless Pattern & Laser foils silver, gold, transparent, special colors.
+		  Colorit: Pigmented matt, high gloss transparent or black, pearl gloss.-->
         </div>
       </div>
       <div class="row">
@@ -72,10 +79,10 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-               <!-- <i class="fas fa-plus fa-3x"></i>-->
+               <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/1graphic.jpg" alt="">
+            <img class="img-fluid" src="img/graphics/gr01" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Graphics</h4>
@@ -233,7 +240,7 @@
   <!-- Portfolio Modals -->
 
   <!-- Modal 1 -->
-  <!--<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
@@ -246,7 +253,7 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-              <!--  <h2 class="text-uppercase">Project Name</h2>
+              <h2 class="text-uppercase">Project Name</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
