Added links(image) product section

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                <!-- <i class="fas fa-plus fa-3x"></i>-->
               </div>
             </div>
-            <img class="img-fluid" src="img/1graphic.jpg" alt="">
+            <a href="graphic.html"><img class="img-fluid" src="img/1graphic.jpg" alt=""></a>
           </a>
           <div class="portfolio-caption">
             <h4>Graphics</h4>
@@ -193,7 +193,7 @@
               <div class="portfolio-hover-content">
                </div>
             </div>
-            <img class="img-fluid" src="img/1plastic.jpg" alt="">
+            <a href="plastic.html"><img class="img-fluid" src="img/1plastic.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Plastics</h4>
@@ -206,7 +206,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/1textile.jpg" alt="">
+            <a href="textile.html"><img class="img-fluid" src="img/1textile.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Textile</h4>
@@ -219,7 +219,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/1ttrc.jpg" alt="">
+            <a href="ttrc.html"><img class="img-fluid" src="img/1ttrc.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>TTR & Coding</h4>
@@ -232,7 +232,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/1cardtech.jpg" alt="">
+            <a href="cardtech.html"><img class="img-fluid" src="img/1cardtech.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Card Technology</h4>
@@ -245,7 +245,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/1brand.jpg" alt="">
+            <a href="brand.html"><img class="img-fluid" src="img/1brand.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Brand Enhancement</h4>
@@ -258,7 +258,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/1dm.jpg" alt="">
+            <a href="digitalmetal.html"><img class="img-fluid" src="img/1dm.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Digital Metal®</h4>
@@ -271,7 +271,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/1hisec.jpg" alt="">
+            <a href="hisec.html"><img class="img-fluid" src="img/1hisec.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>High Security</h4>
@@ -284,7 +284,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/1hsdie.jpg" alt="">
+            <a href="hstools.html"><img class="img-fluid" src="img/1hsdie.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Hot Stamping Die</h4>
