Change image links

--- a/graphic.html
+++ b/graphic.html
@@ -38,19 +38,19 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#page-top">Home</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#page-top">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#company">Company</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#product">Product</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#product">Product</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#solutions">Solutions</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#solutions">Solutions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -82,11 +82,11 @@
                <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr01" alt="">
+            <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Graphics</h4>
-         <!--   <p class="text-muted">Illustration</p>-->
+            <h4>Calendar</h4>
+         <p class="text-muted">Illustration</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -95,10 +95,10 @@
               <div class="portfolio-hover-content">
                </div>
             </div>
-            <img class="img-fluid" src="img/1plastic.jpg" alt="">
+            <img class="img-fluid" src="img/graphics/gr02.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Plastics</h4>
+            <h4>Labels</h4>
             <!--<p class="text-muted">Graphic Design</p>-->
           </div>
         </div>
@@ -108,10 +108,10 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/1textile.jpg" alt="">
+            <img class="img-fluid" src="img/graphics/gr03.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Textile</h4>
+            <h4>Packaging</h4>
            <!-- <p class="text-muted">Identity</p>-->
           </div>
         </div>
@@ -121,10 +121,10 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/1ttrc.jpg" alt="">
+            <img class="img-fluid" src="img/graphics/gr04.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>TTR & Coding</h4>
+            <h4>Books & Magazine</h4>
            <!-- <p class="text-muted">Branding</p>-->
           </div>
         </div>
@@ -134,7 +134,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/1cardtech.jpg" alt="">
+            <img class="img-fluid" src="img/graphics/gr05.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Card Technology</h4>
@@ -147,54 +147,13 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/1brand.jpg" alt="">
+            <img class="img-fluid" src="img/graphics/gr06.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Brand Enhancement</h4>
+            <h4>Cigarettes & Tobacco</h4>
            <!-- <p class="text-muted">Photography</p>-->
           </div>
         </div>
-		<div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-              </div>
-            </div>
-            <img class="img-fluid" src="img/1dm.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Digital Metal®</h4>
-           <!-- <p class="text-muted">Branding</p>-->
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-              </div>
-            </div>
-            <img class="img-fluid" src="img/1hisec.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>High Security</h4>
-           <!-- <p class="text-muted">Website Design</p>-->
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal9">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-              </div>
-            </div>
-            <img class="img-fluid" src="img/1hsdie.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Hot Stamping Die</h4>
-           <!-- <p class="text-muted">Photography</p>-->
-          </div>
-        </div>
-      </div>
-    </div>
   </section>
 
   <!-- Footer -->
