Content, link and alignment adjustment

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="hstools.html"><img class="img-fluid" src="img/1hsdie.jpg" alt="">
+            <a href="hsdies.html"><img class="img-fluid" src="img/1hsdie.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Hot Stamping Die</h4>
