--- a/graphic.html
+++ b/graphic.html
@@ -57,9 +57,15 @@
     </div>
   </nav>
 
+<header class="porthead1">
+    <div class="container">
+      <div class="intro-text">
+      </div>
+    </div>
+  </header>
 
   <!-- Product -->
-  <section class="bg-light" id="product">
+  <section class="bg-light py-5" id="product">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -111,7 +117,7 @@
             <img class="img-fluid" src="img/graphics/gr03.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Packaging</h4>
+            <h4>Consumer Goods Packaging</h4>
            <!-- <p class="text-muted">Identity</p>-->
           </div>
         </div>
@@ -137,7 +143,7 @@
             <img class="img-fluid" src="img/graphics/gr05.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Card Technology</h4>
+            <h4>Graphics</h4>
            <!-- <p class="text-muted">Website Design</p>-->
           </div>
         </div>
