Added remaining product page & supporting elements

--- a/ttr-coding.html
+++ b/ttr-coding.html
@@ -57,7 +57,7 @@
     </div>
   </nav>
 
-<header class="graphhead">
+<header class="ttrchead">
     <div class="container">
       <div class="intro-text">
       </div>
@@ -69,8 +69,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase heading-underline">Graphics</h2>
-          <h3 class="section-subheading text-muted">The unrivaled technology for surface feel and attraction</h3>
+          <h2 class="section-heading text-uppercase heading-underline">TTR & Coding</h2>
+          <h3 class="section-subheading text-muted">Thermal-transfer foils in your corporate color. Anyone can do black. Color print catches eyes.</h3>
 		  <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
 		  Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
 		  Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
