--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#product">Product</a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#solutions">Solutions</a>
-          </li>
+          </li>-->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
@@ -219,7 +219,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="ttrc.html"><img class="img-fluid" src="img/1ttrc.jpg" alt="">
+            <a href="ttr-coding.html"><img class="img-fluid" src="img/1ttrc.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>TTR & Coding</h4>
@@ -232,7 +232,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="cardtech.html"><img class="img-fluid" src="img/1cardtech.jpg" alt="">
+            <a href="card-technology.html"><img class="img-fluid" src="img/1cardtech.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Card Technology</h4>
@@ -245,7 +245,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="brand.html"><img class="img-fluid" src="img/1brand.jpg" alt="">
+            <a href="brand-enhancement.html"><img class="img-fluid" src="img/1brand.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Brand Enhancement</h4>
@@ -258,7 +258,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="digitalmetal.html"><img class="img-fluid" src="img/1dm.jpg" alt="">
+            <a href="digital-metal.html"><img class="img-fluid" src="img/1dm.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Digital Metal®</h4>
@@ -271,7 +271,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="hisec.html"><img class="img-fluid" src="img/1hisec.jpg" alt="">
+            <a href="high-security.html"><img class="img-fluid" src="img/1hisec.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>High Security</h4>
@@ -284,7 +284,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="hsdies.html"><img class="img-fluid" src="img/1hsdie.jpg" alt="">
+            <a href="hot-stamping-dies.html"><img class="img-fluid" src="img/1hsdie.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Hot Stamping Die</h4>
