--- a/plastic.html
+++ b/plastic.html
@@ -91,7 +91,7 @@
             <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Calendar</h4>
+            <h4>Stationary</h4>
          <p class="text-muted">Illustration</p>
           </div>
         </div>
