--- a/graphic.html
+++ b/graphic.html
@@ -43,8 +43,19 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#product">Product</a>
+           <li class="nav-item dropdown">
+            <a class="nav-link js-scroll-trigger dropdown-toggle" data-toggle="dropdown" href="#product">Product</a>
+            <div class="dropdown-menu">
+              <a class="nav-link dropdown-item" href="graphic.html">Graphic</a>
+              <a class="nav-link dropdown-item" href="plastic.html">Plastic</a>
+              <a class="nav-link dropdown-item" href="textile.html">Textile</a>
+              <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
+              <a class="nav-link dropdown-item" href="card-technology.html">Card Technology</a>
+              <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
+              <a class="nav-link dropdown-item" href="digital-metal.html">Digital Metal&reg;</a>
+              <a class="nav-link dropdown-item" href="high-security.html">High Security</a>
+              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Hot Stamping Dies</a>
+            </div>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#solutions">Solutions</a>
