Updated Card Tech and HISEC section

--- a/card-technology.html
+++ b/card-technology.html
@@ -96,14 +96,14 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-               <i class="fas fa-plus fa-3x"></i>
+               <!--<i class="fas fa-plus fa-3x"></i>-->
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
+            <img class="img-fluid" src="img/card/ct01.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Calendar</h4>
-         <p class="text-muted">Illustration</p>
+            <h4>Magnetic Foils</h4>
+         <p class="text-muted"></p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -112,10 +112,10 @@
               <div class="portfolio-hover-content">
                </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr02.jpg" alt="">
+            <img class="img-fluid" src="img/card/ct02.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Labels</h4>
+            <h4>Magnetic Foils</h4>
             <!--<p class="text-muted">Graphic Design</p>-->
           </div>
         </div>
@@ -125,10 +125,10 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr03.jpg" alt="">
+            <img class="img-fluid" src="img/card/ct03.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Consumer Goods Packaging</h4>
+            <h4>Tipping Foils</h4>
            <!-- <p class="text-muted">Identity</p>-->
           </div>
         </div>
@@ -138,10 +138,10 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr04.jpg" alt="">
+            <img class="img-fluid" src="img/card/ct04.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Books & Magazine</h4>
+            <h4>Signature Foils</h4>
            <!-- <p class="text-muted">Branding</p>-->
           </div>
         </div>
@@ -151,23 +151,49 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr05.jpg" alt="">
+            <img class="img-fluid" src="img/card/ct05.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Graphics</h4>
+            <h4>Holographic OVDs</h4>
            <!-- <p class="text-muted">Website Design</p>-->
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+		<div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr06.jpg" alt="">
+            <img class="img-fluid" src="img/card/ct06.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Cigarettes & Tobacco</h4>
+            <h4>Cold Indent Foils</h4>
+           <!-- <p class="text-muted">Photography</p>-->
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/card/ct07.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>UV Invisible Thermal Transfer Ribbons</h4>
+           <!-- <p class="text-muted">Photography</p>-->
+          </div>
+        </div>
+		 <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+		<img class="img-fluid" src="img/card/ct08.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>Scratch-Off Foils</h4>
            <!-- <p class="text-muted">Photography</p>-->
           </div>
         </div>
