--- a/high-security.html
+++ b/high-security.html
@@ -99,11 +99,11 @@
                <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
+            <img class="img-fluid" src="img/HISEC/hs01.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Calendar</h4>
-         <p class="text-muted">Illustration</p>
+            <h4>Bank Notes</h4>
+         <p class="text-muted"></p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -112,10 +112,10 @@
               <div class="portfolio-hover-content">
                </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr02.jpg" alt="">
+            <img class="img-fluid" src="img/HISEC/hs02.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Labels</h4>
+            <h4>ID Cards</h4>
             <!--<p class="text-muted">Graphic Design</p>-->
           </div>
         </div>
@@ -125,10 +125,10 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr03.jpg" alt="">
+            <img class="img-fluid" src="img/HISEC/hs03.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Consumer Goods Packaging</h4>
+            <h4>Passports</h4>
            <!-- <p class="text-muted">Identity</p>-->
           </div>
         </div>
@@ -138,10 +138,10 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr04.jpg" alt="">
+            <img class="img-fluid" src="img/HISEC/hs04.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Books & Magazine</h4>
+            <h4>Visas</h4>
            <!-- <p class="text-muted">Branding</p>-->
           </div>
         </div>
@@ -151,10 +151,10 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr05.jpg" alt="">
+            <img class="img-fluid" src="img/HISEC/hs05.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Graphics</h4>
+            <h4>Driver's License</h4>
            <!-- <p class="text-muted">Website Design</p>-->
           </div>
         </div>
@@ -164,11 +164,24 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr06.jpg" alt="">
+            <img class="img-fluid" src="img/HISEC/hs06.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Cigarettes & Tobacco</h4>
+            <h4>Vehicle Documents</h4>
            <!-- <p class="text-muted">Photography</p>-->
+          </div>
+        </div>
+		 <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/HISEC/hs07.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>Breeder Documents</h4>
+           <p class="text-muted">Birth, marriage and deaths certificates</p>
           </div>
         </div>
   </section>
